Updated doc install for Tomcat